--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,15 @@
   flex-direction: row;
   justify-content: space-around;
 }
+
+nav.imageWrapper div.img { 
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  max-height: 70vh;
+  background-size: cover;
+  background-image: url('../images/background.jpg'); //replace background, wrap in URL reference
+}
